// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TechnicalSpecificationLeadBlock tests should render correctly when Multiple classifications provided With more than one feature units 1`] = `
<div>
  <div
    class="MuiGrid-root LeadBlock-root-131 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-leadBlockContentSection-133"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div
            class="Accordion-root-136 Accordion-noInnerPadding-139"
          >
            <div
              class="MuiPaper-root MuiAccordion-root Accordion-item-137 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-140 Mui-expanded Accordion-summaryExpanded-141"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent-142 Mui-expanded Accordion-summaryExpanded-141"
                >
                  <h6
                    class="MuiTypography-root Typography-root-146 MuiTypography-h6"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded Accordion-summaryExpanded-141 MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-entered"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details"
                      >
                        <div>
                          <table
                            class="MuiTable-root Table-root-155 Table-evenColor-157 Table-noBorder-156"
                          >
                            <tbody
                              class="MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200
                                </td>
                              </tr>
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiAccordion-root Accordion-item-137 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-140 Mui-expanded Accordion-summaryExpanded-141"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent-142 Mui-expanded Accordion-summaryExpanded-141"
                >
                  <h6
                    class="MuiTypography-root Typography-root-146 MuiTypography-h6"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded Accordion-summaryExpanded-141 MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-entered"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details"
                      >
                        <div>
                          <table
                            class="MuiTable-root Table-root-155 Table-evenColor-157 Table-noBorder-156"
                          >
                            <tbody
                              class="MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200
                                </td>
                              </tr>
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when Multiple classifications provided With no feature units 1`] = `
<div>
  <div
    class="MuiGrid-root LeadBlock-root-92 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-leadBlockContentSection-94"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div
            class="Accordion-root-97 Accordion-noInnerPadding-100"
          >
            <div
              class="MuiPaper-root MuiAccordion-root Accordion-item-98 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-101 Mui-expanded Accordion-summaryExpanded-102"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent-103 Mui-expanded Accordion-summaryExpanded-102"
                >
                  <h6
                    class="MuiTypography-root Typography-root-107 MuiTypography-h6"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded Accordion-summaryExpanded-102 MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-entered"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details"
                      >
                        <div>
                          <table
                            class="MuiTable-root Table-root-116 Table-evenColor-118 Table-noBorder-117"
                          >
                            <tbody
                              class="MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiAccordion-root Accordion-item-98 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-101 Mui-expanded Accordion-summaryExpanded-102"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent-103 Mui-expanded Accordion-summaryExpanded-102"
                >
                  <h6
                    class="MuiTypography-root Typography-root-107 MuiTypography-h6"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded Accordion-summaryExpanded-102 MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-entered"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details"
                      >
                        <div>
                          <table
                            class="MuiTable-root Table-root-116 Table-evenColor-118 Table-noBorder-117"
                          >
                            <tbody
                              class="MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when One classifications provided With a feature units 1`] = `
<div>
  <div
    class="MuiGrid-root LeadBlock-root-49 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-leadBlockContentSection-51"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div>
            <table
              class="MuiTable-root Table-root-54 Table-evenColor-56"
            >
              <thead
                class="MuiTableHead-root ColorPair-root-66 ColorPair-pearl-68"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    systemAttributes
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                  >
                    feature1
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                  >
                    200
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when One classifications provided With no feature units 1`] = `
<div>
  <div
    class="MuiGrid-root LeadBlock-root-6 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-leadBlockContentSection-8"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div>
            <table
              class="MuiTable-root Table-root-11 Table-evenColor-13"
            >
              <thead
                class="MuiTableHead-root ColorPair-root-23 ColorPair-pearl-25"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    systemAttributes
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                  >
                    feature1
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                  >
                    200
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when no classifications provided With tech spec an empty set 1`] = `
<div>
  <div
    class="MuiGrid-root LeadBlock-root-1 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-leadBlockContentSection-3"
      />
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when specification provided With no specification 1`] = `
<div>
  <div
    class="MuiGrid-root LeadBlock-root-261 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-leadBlockContentSection-263"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div
            class="Accordion-root-266 Accordion-noInnerPadding-269"
          >
            <div
              class="MuiPaper-root MuiAccordion-root Accordion-item-267 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-270 Mui-expanded Accordion-summaryExpanded-271"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent-272 Mui-expanded Accordion-summaryExpanded-271"
                >
                  <h6
                    class="MuiTypography-root Typography-root-276 MuiTypography-h6"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded Accordion-summaryExpanded-271 MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-entered"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details"
                      >
                        <div>
                          <table
                            class="MuiTable-root Table-root-285 Table-evenColor-287 Table-noBorder-286"
                          >
                            <tbody
                              class="MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiAccordion-root Accordion-item-267 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-270 Mui-expanded Accordion-summaryExpanded-271"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent-272 Mui-expanded Accordion-summaryExpanded-271"
                >
                  <h6
                    class="MuiTypography-root Typography-root-276 MuiTypography-h6"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded Accordion-summaryExpanded-271 MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-entered"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details"
                      >
                        <div>
                          <table
                            class="MuiTable-root Table-root-285 Table-evenColor-287 Table-noBorder-286"
                          >
                            <tbody
                              class="MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when specification provided With specification 1`] = `
<div>
  <div
    class="MuiGrid-root LeadBlock-root-170 MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlock-leadBlockContentSection-172"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div
            class="Accordion-root-175 Accordion-noInnerPadding-178"
          >
            <div
              class="MuiPaper-root MuiAccordion-root Accordion-item-176 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-179 Mui-expanded Accordion-summaryExpanded-180"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent-181 Mui-expanded Accordion-summaryExpanded-180"
                >
                  <h6
                    class="MuiTypography-root Typography-root-185 MuiTypography-h6"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded Accordion-summaryExpanded-180 MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-entered"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details"
                      >
                        <div>
                          <table
                            class="MuiTable-root Table-root-194 Table-evenColor-196 Table-noBorder-195"
                          >
                            <tbody
                              class="MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiAccordion-root Accordion-item-176 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-179 Mui-expanded Accordion-summaryExpanded-180"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent-181 Mui-expanded Accordion-summaryExpanded-180"
                >
                  <h6
                    class="MuiTypography-root Typography-root-185 MuiTypography-h6"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded Accordion-summaryExpanded-180 MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-entered"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details"
                      >
                        <div>
                          <table
                            class="MuiTable-root Table-root-194 Table-evenColor-196 Table-noBorder-195"
                          >
                            <tbody
                              class="MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root Grid-item-173 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="specificationNotes"
    >
      <div
        class="ColorPair-root-213 ColorPair-pearl-215"
      >
        <div
          class="PostItCard-root-209"
        >
          <div
            class="PostItCard-section-210"
          >
            <h4
              class="MuiTypography-root Typography-root-185 Typography-underline-187 MuiTypography-h4"
              data-testid="typography"
            >
              specification notes title
            </h4>
            <div
              class="PostItCard-content-211"
            >
              <div
                class="RichText-root-239"
              >
                <h3
                  class="MuiTypography-root RichText-title-240 Typography-root-185 MuiTypography-h3"
                  data-testid="typography"
                >
                  test rich text
                </h3>
              </div>
            </div>
            <div
              class="PostItCard-action-212"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-241 MuiButton-contained Button-contained-243 MuiButton-containedPrimary"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"specification notes title - ImALink\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-244"
                >
                  ImALink
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
